agregar explicaciones del tag img

--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
             agregan en el tag span) al texto en el interior del span-->
             <span>La etique span se una para textos cortos</span>
         </article>
+        
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Imagen icono de Google"/> <!--Normalmente las fotos
+        no se guardan en la pagina web sino que se guardan en un sitio en la nube conocido como CDN (
+        Content Delivery Network, p. ej. cloudynery, amazonS3, Google y Azure tienen uno propio),
+        en el cual previamente se cargan las fotos, y la pagina accdete las fotos en este sitio
+        usando la URL de la foto. Solo se deben usar fotos publicas (sin Copy Right)-->
+        <img src="./media/Border_Collie.jpg" alt="Labrador Border_Collie"/> <!--Tiene siempre 2 atributos: el src que pueder ser una url o una ruta relativa
+                usualmente hacia la carpeta media en el proyecto, que contiene: imagenes, iconos,
+                videos, animaciones; en general toda la multimedia. Es muy importante trabajar
+                con mucho cuidado las fotos en las pagina web. las fotos son cargadas en el
+                navegador desde un servidor donde esta la foto; por ello las fotos en una pagina web no
+                deberian pesar mas de 100kbytes, de lo contrario se retrasa la carga de la pagina en el navegador,
+                debe haber una buena relacion (trade off) entre la calidad de la foto y el tiempo de carga
+                En un navegador se pueden usar imagenes tipo: jpg(formato foto), png(formato liviano
+                usado para iconos, logos, etc) y sbg (formato nuevo no soportado por todos los navegadores)-->
         <section>Seccion 2</section>
         <section>Seccion 3</section>
 
