Se agrega explicacion sobre etiquetas ancla <a>

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <h4>Esto es un titulo h4</h4>
         <h5>Esto es un titulo h5</h5>
         <h6>Esto es un titulo h6</h6>
+        <a href="./other.html">Ir a pagina interna</a> <!--Vinculo hacia la pagina interna other.html-->
+        <a href="https://www.google.com/">Vinculo hacia otra pagina web</a> <!--Se pueden tener anclas (<a>) hacia paginas
+            internas o externas, o hacia secciones en la misma pagina web-->
+        <!--En el siguiente caso la imagen de Google es ahora el link hacia la pagina de Google-->
+        <a href="https://www.google.com/"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Imagen icono de Google"/></a>
         <article>
             Este elemento se usa para escribir textos muy largos por ejemplo un blog;
             por ende internamente un articulo deberia contener varios parrafos
@@ -82,7 +87,8 @@
         no se guardan en la pagina web sino que se guardan en un sitio en la nube conocido como CDN (
         Content Delivery Network, p. ej. cloudynery, amazonS3, Google y Azure tienen uno propio),
         en el cual previamente se cargan las fotos, y la pagina accdete las fotos en este sitio
-        usando la URL de la foto. Solo se deben usar fotos publicas (sin Copy Right)-->
+        usando la URL de la foto. Solo se deben usar fotos publicas (sin Copy Right)
+        links de fotos: https://unsplash.com/es, https://www.pexels.com/es-es/-->
         <img src="./media/Border_Collie.jpg" alt="Labrador Border_Collie"/> <!--Tiene siempre 2 atributos: el src que pueder ser una url o una ruta relativa
                 usualmente hacia la carpeta media en el proyecto, que contiene: imagenes, iconos,
                 videos, animaciones; en general toda la multimedia. Es muy importante trabajar
@@ -91,7 +97,8 @@
                 deberian pesar mas de 100kbytes, de lo contrario se retrasa la carga de la pagina en el navegador,
                 debe haber una buena relacion (trade off) entre la calidad de la foto y el tiempo de carga
                 En un navegador se pueden usar imagenes tipo: jpg(formato foto), png(formato liviano
-                usado para iconos, logos, etc) y sbg (formato nuevo no soportado por todos los navegadores)-->
+                usado para iconos, logos, etc) y sbg (formato nuevo no soportado por todos los navegadores)
+                Github otorga aprox 1G de almacenamiento; se debe evitar cargar el proyecto de fotos-->
         <section>Seccion 2</section>
         <section>Seccion 3</section>
 
