se agrega informacion de listas ordenadas y desordenadas

--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
         direcciones)-->
     <header>
         <p>Hola mundo ñ á</p>
+        <!--HTML permite tener 2 tipos de listas: ordenadas o numeradas y desordenadas-->
+        <!--Las listas ordenadas son muy utiles para explicar un proceso o procedimiento-->
+        <h3>Esto es una lista ordenada</h3>
+        <ol>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+            <li>Elemento 4</li>
+        </ol>
+        <!--Las listas se usan mucho en los menus de los headers sobre todo las desordenadas-->
+        <h3>Esto es una lista desordenada</h3>
+        <ul>
+            <li>Elemento 1</li>
+            <li>Elemento 2</li>
+            <li>Elemento 3</li>
+            <li>Elemento 4</li>
+        </ul>
+        <!--div es una estiqueta generica que se puede usar para dar formato a cualquier parte particular
+        de una pagina web. Los div pueden tener tanta utilidad como se quiera; estas podrian
+        reemplazar tags p, section, header, o cualquier etiqueta contenedora. Si se pone todo
+        con divs funciona pero si el codigo queda muy lleno de divs el mantenimiento del codigo
+        se hace muy dificil. <div> y <a> son las etiquetas mas usadas pero se deberia tratar
+        de usar <div> lo menos posible. Siempre se debe tratar de usar la etiqueta mas acorde o
+        idonea para cada parte de la pagina web. los <div> pueden ir p. ej. como subsecciones
+        en un tag section-->
+        <div></div>
     </header>
     <main>
         <section>Seccion 1</section>
@@ -113,3 +139,9 @@
 </body>
 
 </html>
+<!--Primero se debe organizar el layout o estructura en html, luego de ello se introduce contenido
+y es estilos y posteriormente se introduce la funcionalidad-->
+<!--En la siguiente pagina de estudio podemos encontrar todos los tags html:
+https://htmlcheatsheet.com/-->
+<!--La entrada y salida de datos de una pagina web se realiza a traves de formularios, para las
+cuales se encuentra un variado conjunto de tags-->
