agregar explicacion de formulario

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
         <a href="https://www.google.com/">Vinculo hacia otra pagina web</a> <!--Se pueden tener anclas (<a>) hacia paginas
             internas o externas, o hacia secciones en la misma pagina web-->
         <!--En el siguiente caso la imagen de Google es ahora el link hacia la pagina de Google-->
-        <a href="https://www.google.com/"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Imagen icono de Google"/></a>
+        <a href="https://www.google.com/"><img
+                src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+                alt="Imagen icono de Google" /></a>
+        <!--Link a formulario-->
+        <a href="./formulario.html">Link a formulario</a>
         <article>
             Este elemento se usa para escribir textos muy largos por ejemplo un blog;
             por ende internamente un articulo deberia contener varios parrafos
@@ -108,14 +112,15 @@
             agregan en el tag span) al texto en el interior del span-->
             <span>La etique span se una para textos cortos</span>
         </article>
-        
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Imagen icono de Google"/> <!--Normalmente las fotos
+
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+            alt="Imagen icono de Google" /> <!--Normalmente las fotos
         no se guardan en la pagina web sino que se guardan en un sitio en la nube conocido como CDN (
         Content Delivery Network, p. ej. cloudynery, amazonS3, Google y Azure tienen uno propio),
         en el cual previamente se cargan las fotos, y la pagina accdete las fotos en este sitio
         usando la URL de la foto. Solo se deben usar fotos publicas (sin Copy Right)
         links de fotos: https://unsplash.com/es, https://www.pexels.com/es-es/-->
-        <img src="./media/Border_Collie.jpg" alt="Labrador Border_Collie"/> <!--Tiene siempre 2 atributos: el src que pueder ser una url o una ruta relativa
+        <img src="./media/Border_Collie.jpg" alt="Labrador Border_Collie" /> <!--Tiene siempre 2 atributos: el src que pueder ser una url o una ruta relativa
                 usualmente hacia la carpeta media en el proyecto, que contiene: imagenes, iconos,
                 videos, animaciones; en general toda la multimedia. Es muy importante trabajar
                 con mucho cuidado las fotos en las pagina web. las fotos son cargadas en el
