Se agregaron explicaciones de style inline

--- a/formulario.html
+++ b/formulario.html
@@ -25,8 +25,11 @@
         <label for="verification"><input id="verification" name="verification" type="checkbox" /> Acepta terminos y condiciones</label>
         <label for="radio-button"><input id="radio-button" name="radio-button" type="radio" /></label>
         <input type="file" />
-        <br><button type="submit">Submmit</button><!--Envia el formulario-->
-        <button type="reset">Reset</button>
+        <br><button type="submit" style="background-color:red; color:white;">Submmit</button><!--Envia el formulario-->
+        <button type="reset" style="color: blue; background-color: violet;">Reset</button>
+        <!--Todas las etiquetas html tienen una propiedad que se conoce como style la cual
+        puede igualarse a un valor que contiene el estilo de esa etiqueta en particular. Esta forma
+        de ingresar el estilo se conoce como inline-->
         <!--Hasta aqui simplemente se envia como se ingresa la informacion, capturar la informacion
         para enviarla es otra historia que se esudia despues-->
         <!--Los preprocesadors son librerias que facilitan el trabajo con CSS-->
