--- a/index.html
+++ b/index.html
@@ -150,3 +150,9 @@ y es estilos y posteriormente se introduce la funcionalidad-->
 https://htmlcheatsheet.com/-->
 <!--La entrada y salida de datos de una pagina web se realiza a traves de formularios, para las
 cuales se encuentra un variado conjunto de tags-->
+<!--Una pagina web contiene muchos archivos html; uno por cada pantalla, enre las cuales se 
+realiza la navegacion en el aplicativo web-->
+<!--https://nodejs.org/en: este es el motor de todas las paginas web que funcionan con react, ademas
+permite el trabajo con preprocesadores, con express (se usa en el backend), con mongle, etc. Nodejs
+es una especie de motor que permite ejecutar la apliacion web, nodejs es una especie de motor de 
+codigos que permite correr apliaciones web-->
