Se agregan estilos en el head con etiqueta style

--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+
+    <style>
+        button {
+            background-color: red;
+            color: white;
+            font: italic;
+        }
+
+    </style>
 </head>
 
 <body>
@@ -26,7 +35,7 @@
         <label for="radio-button"><input id="radio-button" name="radio-button" type="radio" /></label>
         <input type="file" />
         <br><button type="submit" style="background-color:red; color:white;">Submmit</button><!--Envia el formulario-->
-        <button type="reset" style="color: blue; background-color: violet;">Reset</button>
+        <button type="reset" style="color: blue; background-color: red;">Reset</button>
         <!--Todas las etiquetas html tienen una propiedad que se conoce como style la cual
         puede igualarse a un valor que contiene el estilo de esa etiqueta en particular. Esta forma
         de ingresar el estilo se conoce como inline-->
