Se agregan estilos de margin, padding, border, display: grid y display flex con sus variadas formas de justificacion; vertical, horizontal, centrada, reverso, con espacios, etc

--- a/index.html
+++ b/index.html
@@ -107,15 +107,16 @@
                 sequi debitis. Totam, voluptas?
             </p>
             <h3>Parrafo 3</h3>
-            <p class="parrafo3 bigSizeBold" id="parrafo3">Esto es el parrafo 3: Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            <p class="parrafo3 bigSizeBold  contenedorConMargen" id="parrafo3">Esto es el parrafo 3: Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Obcaecati, quos iste quasi amet voluptatem temporibus at ipsa odio
                 exercitationem distinctio cumque odit assumenda ratione architecto reprehenderit
                 sequi debitis. Totam, voluptas?
+                <span class="spanSize">La etique span se una para textos cortos</span>
             </p>
             <!--A diferencia de los parrafos (p) que dejan espacio arriba y abajo de ellos los
             elementos span no lo hacen, se usa para cambiar estilos o cietos atributos (que se
             agregan en el tag span) al texto en el interior del span-->
-            <span class="spanSize">La etique span se una para textos cortos</span>
+
         </article>
 
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
@@ -135,7 +136,44 @@
                 En un navegador se pueden usar imagenes tipo: jpg(formato foto), png(formato liviano
                 usado para iconos, logos, etc) y sbg (formato nuevo no soportado por todos los navegadores)
                 Github otorga aprox 1G de almacenamiento; se debe evitar cargar el proyecto de fotos-->
-        <section>Seccion 2</section>
+        <section>
+            <div class="contenedorConMargen">
+                <div>Div1</div>
+                <div>Div2</div>
+                <div>Div3</div>
+            </div>
+            <div class="contenedorDivsGrid">
+                <div class="divTest">Div1</div>
+                <div class="divTest">Div2</div>
+                <div class="divTest">Div3</div>
+                <div class="divTest">Div4</div>
+                <div class="divTest">Div5</div>
+                <div class="divTest">Div6</div>
+                <div class="divTest">Div7</div>
+                <div class="divTest">Div8</div>
+                <div class="divTest">Div9</div>
+                <div class="divTest">Div10</div>
+                <div class="divTest">Div11</div>
+                <div class="divTest">Div12</div>
+                <div class="divTest">Div13</div>
+            </div>
+            <div class="contenedorDivsFlex">
+                <div class="divTest">Div1</div>
+                <div class="divTest">Div2</div>
+                <div class="divTest">Div3</div>
+                <div class="divTest">Div4</div>
+                <div class="divTest">Div5</div>
+                <div class="divTest">Div6</div>
+                <div class="divTest">Div7</div>
+                <div class="divTest">Div8</div>
+                <div class="divTest">Div9</div>
+                <div class="divTest">Div10</div>
+                <div class="divTest">Div11</div>
+                <div class="divTest">Div12</div>
+                <div class="divTest">Div13</div>
+            </div>
+
+        </section>
         <section>Seccion 3</section>
 
 
@@ -161,3 +199,6 @@ realiza la navegacion en el aplicativo web-->
 permite el trabajo con preprocesadores, con express (se usa en el backend), con mongle, etc. Nodejs
 es una especie de motor que permite ejecutar la apliacion web, nodejs es una especie de motor de 
 codigos que permite correr apliaciones web-->
+
+<!--El proceso de realizar primero un Mockup y posteriormente en base a este diseñar
+la pagina web se conoce como backetapp-->
