Se agrega un comentario final, en index, acerca de la gestion de codigo y proyecto

--- a/index.html
+++ b/index.html
@@ -202,3 +202,7 @@ codigos que permite correr apliaciones web-->
 
 <!--El proceso de realizar primero un Mockup y posteriormente en base a este diseñar
 la pagina web se conoce como backetapp-->
+
+<!--El codigo lo gestionamos usando git, y el proyecto lo gestionamos con la metodologia
+SCRUM, github es una plataforma que permite desarrollar SCRUM, tambien existe la plataforma:
+miro (https://miro.com/es/signup/), tello-->
